bad.log
--2014-12-15 05:16:03--  http://ftp.de.debian.org/debian/pool/main/s/slirp/slirp_1.0.17.orig.tar.gz
Resolving ftp.de.debian.org (ftp.de.debian.org)... 141.76.2.4
Connecting to ftp.de.debian.org (ftp.de.debian.org)|141.76.2.4|:80... connected.
HTTP request sent, awaiting response... 200 OK
Length: 305754 (299K) [application/x-gzip]
Saving to: ‘slirp.tar.gz’

     0K .......... .......... .......... .......... .......... 16%  114K 2s
    50K .......... .......... .......... .......... .......... 33%  260K 1s
   100K .......... .......... .......... .......... .......... 50%  840K 1s
   150K .......... .......... .......... .......... .......... 66%  338K 0s
   200K .......... .......... .......... .......... .......... 83% 1.15M 0s
   250K .......... .......... .......... .......... ........  100%  285K=1.0s

2014-12-15 05:16:04 (285 KB/s) - ‘slirp.tar.gz’ saved [305754/305754]

./ppp/auth.c: In function ‘check_auth_options’:
./ppp/auth.c:355:2: warning: incompatible implicit declaration of built-in function ‘exit’
  exit(1);
  ^
./ppp/auth.c: In function ‘free_wordlist’:
./ppp/auth.c:954:2: warning: incompatible implicit declaration of built-in function ‘free’
  free(wp);
  ^
./ppp/pppdfncs.c: In function ‘untimeout’:
./ppp/pppdfncs.c:282:25: warning: incompatible implicit declaration of built-in function ‘free’
                  (void) free((char *) freep);
                         ^
./ppp/pppdfncs.c: In function ‘alrm’:
./ppp/pppdfncs.c:356:10: warning: incompatible implicit declaration of built-in function ‘free’
   (void) free((char *) freep);
          ^
./ppp.c: In function ‘doframe’:
./ppp.c:334:3: error: incompatible type for argument 1 of ‘m_free’
   m_free(m);
   ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:370:4: error: incompatible type for argument 1 of ‘m_free’
    m_free(m);
    ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:444:4: error: incompatible type for argument 1 of ‘m_free’
    m_free(m);
    ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:456:4: error: incompatible type for argument 1 of ‘m_free’
    m_free(m);
    ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:466:5: error: incompatible type for argument 1 of ‘m_free’
     m_free(m);
     ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:477:3: error: incompatible type for argument 1 of ‘m_free’
   m_free(m);
   ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c: In function ‘ppp_input’:
./ppp.c:518:5: error: incompatible type for argument 1 of ‘m_free’
     m_free(ttyp->m);
     ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c: In function ‘ppp_encap’:
./ppp.c:617:4: error: incompatible type for argument 1 of ‘m_free’
    m_free(m);
    ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
./ppp.c:637:2: error: incompatible type for argument 1 of ‘m_free’
  m_free(m);
  ^
In file included from ./slirp.h:266:0,
                 from ./ppp/ppp.h:27,
                 from ./ppp.c:55:
./mbuf.p:4:6: note: expected ‘struct mbuf’ but argument is of type ‘struct mbuf *’
 void m_free _P((struct mbuf));
      ^
make: *** [ppp.o] Error 1
